--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.0.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.17"
