--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
+    "framer-motion": "^12.12.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "razorpay": "^2.9.6",
