--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@clerk/shared": "^2.9.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.0.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.487.0",
