--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^7.0.1",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
